--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -1,18 +1,12 @@
 # https://www.elastic.co/guide/en/logstash/current/plugins-inputs-beats.html
 input {
   beats {
-    port => 5045
-#     ssl => true
-#     ssl_certificate_authorities => ["${ELASTIC_SSL_CERTIFICATEAUTHORITY}"]
-#     ssl_certificate => "/usr/share/logstash/config/certs/logstash.crt"
-#     ssl_key => "/usr/share/logstash/config/certs/logstash.key"
-# #    ssl_verify_mode => "force_peer"
-#     ssl_verify_mode => "none"
+    port => 5044
   }
 }
 
 filter {
-  if [fileset][name] == "gc" {
+  if [service][type] == "elasticsearch" {
     grok {
       match => {"message" => "%{TIMESTAMP_ISO8601:timestamp}: %{NUMBER:jvm_time}: \[%{DATA:gc_type} \(%{DATA:gc_cause}\) %{DATA:gc_time}: \[%{DATA:gc_collector}: %{NUMBER:young_generation_before}\K\-\>%{NUMBER:young_generation_after}\K\(%{NUMBER:young_generation_total}\K\)\, %{NUMBER:collection_time} .*?\] %{NUMBER:heap_before}\K\-\>%{NUMBER:heap_after}\K\(%{NUMBER:heap_total}\K\)\, %{NUMBER:gc_duration} .*?\] \[.*?\: .*?\=%{NUMBER:cpu_time} .*?\=%{NUMBER:system_time}\, .*?\=%{NUMBER:clock_time} .*?\]"}
     }
@@ -37,11 +31,9 @@ filter {
 # https://www.elastic.co/guide/en/logstash/current/use-ingest-pipelines.html
 output {
     elasticsearch {
-      hosts => ["https://es01.${APP_NET}:9200"]
+      hosts => ["http://es01.${APP_NET}:9200"]
       data_stream => true
-      ssl => true
-      ssl_certificate_verification => false
-      cacert => ["${ELASTIC_SSL_CERTIFICATEAUTHORITY}"]
+      ssl => false
       user => "${LOGSTASH_USERNAME}"
       password => "${LOGSTASH_PASSWORD}"
     }
