--- a/extras/logstash/syslog-access.conf
+++ b/extras/logstash/syslog-access.conf
@@ -26,11 +26,9 @@ filter {
 # https://www.elastic.co/guide/en/logstash/current/plugins-outputs-elasticsearch.html
 output {
   elasticsearch {
-    hosts => ["https://es01.${APP_NET}:9200"]
+    hosts => ["http://es01.${APP_NET}:9200"]
     data_stream => true
-    ssl => true
-    ssl_certificate_verification => false
-    cacert => ["${ELASTIC_SSL_CERTIFICATEAUTHORITY}"]
+    ssl => false
     user => "${LOGSTASH_USERNAME}"
     password => "${LOGSTASH_PASSWORD}"
   }
