--- a/compose/docker-es02.yml
+++ b/compose/docker-es02.yml
@@ -30,8 +30,6 @@
       - http.port=9201
       - transport.port=9301
       - discovery.seed_hosts=es01:9300
-      - xpack.security.http.ssl.key=certs/es02/es02.key
-      - xpack.security.http.ssl.certificate=certs/es02/es02.crt
       - xpack.security.transport.ssl.key=certs/es02/es02.key
       - xpack.security.transport.ssl.certificate=certs/es02/es02.crt
       - CLUSTER_NAME=${CLUSTER_NAME}
@@ -45,7 +43,7 @@
         soft: -1
         hard: -1
     healthcheck:
-      test: ["CMD-SHELL", "curl -s --cacert config/certs/ca/ca.crt https://${ES_NET}.3:9201 | grep -q 'missing authentication credentials'" ]
+      test: ["CMD-SHELL", "curl -s http://${ES_NET}.3:9201 | grep -q 'missing authentication credentials'" ]
       interval: 10s
       timeout: 10s
       retries: 500
