--- a/extras/apm-server/apm-server.yml
+++ b/extras/apm-server/apm-server.yml
@@ -3,7 +3,7 @@
 ################################ APM Server ################################
 
 apm-server:
-  host: "0.0.0.0"
+  host: "${ES_NET}.10"
 
   #---------------------------- APM Server - RUM Real User Monitoring ----------------------------
 
@@ -14,29 +14,26 @@ apm-server:
     enabled: true
     output:
       elasticsearch:
-        hosts: ["https://es01.${APP_NET}:9200"]
-        protocol: "https"
+        hosts: ["http://es01.${APP_NET}:9200"]
+        protocol: "http"
         #api_key: "id:api_key"
         # username: "apm_system"
         username: "${ELASTICSEARCH_USERNAME}"
         password: "${ELASTICSEARCH_PASSWORD}"
-        ssl.certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-        ssl.verification_mode: "${VERIFICATION_MODE}"
+        ssl.enabled: false
       # Index pattern in which to search for source maps, when fetching source maps from Elasticsearch.
         index_pattern: "apm-*-sourcemap*"
 
 #---------------------------- APM Server - Agent Configuration ----------------------------
   kibana:
     enabled: true
-    host: "https://kibana.${APP_NET}:5601"
-    protocol: "https"
+    host: "http://kibana.${APP_NET}:5601"
+    protocol: "http"
     # api_key: "${AGENT_API_KEY}"
     # username: "apm_system"
     username: "${ELASTICSEARCH_USERNAME}"
     password: "${ELASTICSEARCH_PASSWORD}"
-    ssl.enabled: true
-    ssl.certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-    ssl.verification_mode: "${VERIFICATION_MODE}"
+    ssl.enabled: false
 
 #================================ Outputs =================================
 
@@ -45,14 +42,12 @@ apm-server:
 #-------------------------- Elasticsearch output --------------------------
 output.elasticsearch:
   enabled: true
-  hosts: ["https://es01.${APP_NET}:9200"]
-  protocol: "https"
+  hosts: ["http://es01.${APP_NET}:9200"]
+  protocol: "http"
   # username: "apm_system"
   username: "${ELASTICSEARCH_USERNAME}"
   password: "${ELASTICSEARCH_PASSWORD}"
-  ssl.enabled: true
-  ssl.certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-  ssl.verification_mode: "${VERIFICATION_MODE}"
+  ssl.enabled: false
 
 #=============================== HTTP Endpoint ===============================
 
@@ -69,8 +64,6 @@ monitoring:
   elasticsearch:
     username: "${ELASTICSEARCH_USERNAME}"
     password: "${ELASTICSEARCH_PASSWORD}"
-    hosts: ["https://es01.${APP_NET}:9200"]
-    protocol: "https"
-    ssl.enabled: true
-    ssl.certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-    ssl.verification_mode: "${VERIFICATION_MODE}"
+    hosts: ["http://es01.${APP_NET}:9200"]
+    protocol: "http"
+    ssl.enabled: false
