--- a/extras/elasticsearch/elasticsearch.yml
+++ b/extras/elasticsearch/elasticsearch.yml
@@ -10,13 +10,11 @@ xpack:
     authc.api_key.enabled: true
     http:
       ssl:
-        enabled: true
-        verification_mode: "certificate"
-        certificate_authorities: "certs/ca/ca.crt"
+        enabled: false
     transport:
       ssl:
         enabled: true
-        verification_mode: "certificate"
+        verification_mode: "none"
         certificate_authorities: "certs/ca/ca.crt"
 
 # logger.org.elasticsearch.discovery: INFO
