--- a/extras/filebeat/filebeat.yml
+++ b/extras/filebeat/filebeat.yml
@@ -14,27 +14,18 @@ filebeat.config:
     reload.enabled: false
 
 output:
-  # for provisioning:
   logstash:
     enabled: true
-    hosts: ["logstash.${APP_NET}:5045"]
-    # ssl:
-      ## certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-      # certificate: "${LOGSTASH_SERVER_CERT}"
-      # key: "${LOGSTASH_SERVER_CERT_KEY}"
-      # verification_mode: "${VERIFICATION_MODE}"
-      # verification_mode: "none"
+    hosts: ["logstash.${APP_NET}:5044"]
    
   # for /filebeat -e setup --dashboards:
   # elasticsearch:
-  #   hosts: ["https://es01.${APP_NET}:9200"]
-  #   protocol: "https"
+  #   hosts: ["http://es01.${APP_NET}:9200"]
+  #   protocol: "http"
   #   username: "${ELASTICSEARCH_USERNAME}"
   #   password: "${ELASTICSEARCH_PASSWORD}"
   #   ssl:
-  #     enabled: true
-  #     certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-  #     verification_mode: "${VERIFICATION_MODE}"
+  #     enabled: false
 
 setup:      
   ilm.overwrite: true
@@ -43,22 +34,17 @@ setup:
     #index.codec: best_compression
     #_source.enabled: false
   elasticsearch:
-    hosts: ["https://es01.${APP_NET}:9200"]
-    protocol: "https"
+    hosts: ["http://es01.${APP_NET}:9200"]
+    protocol: "http"
     username: "${ELASTICSEARCH_USERNAME}"
     password: "${ELASTICSEARCH_PASSWORD}"
     ssl:
-      enabled: true
-      certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-      verification_mode: "${VERIFICATION_MODE}"
+      enabled: false
   
   kibana:
-    host: "http://kibana.${APP_NET}:8080"
-    # host: "https://kibana.${APP_NET}:5601"
+    host: "http://kibana.${APP_NET}:5601"
     username: '${ELASTICSEARCH_USERNAME}'
     password: '${ELASTICSEARCH_PASSWORD}'
     protocol: "http"
-    # ssl:
-    #  enabled: true
-    #  certificate_authorities: ['${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}']
-    #  erification_mode: "${VERIFICATION_MODE}"
+    ssl:
+      enabled: false
