--- a/extras/metricbeat/metricbeat/elasticsearch-xpack.yml
+++ b/extras/metricbeat/metricbeat/elasticsearch-xpack.yml
@@ -5,13 +5,14 @@
   xpack.enabled: true
   period: 10s
   hosts: 
-    - "https://es01.${APP_NET}:9200"
-    - "https://es02.${APP_NET}:9201"
-  protocol: "https"
+    - "http://es01.${APP_NET}:9200"
+    - "http://es02.${APP_NET}:9201"
+  protocol: "http"
   username: "${ELASTICSEARCH_USERNAME}"
   password: "${ELASTICSEARCH_PASSWORD}"
   ssl:
-    enabled: true
-    certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-    verification_mode: "${VERIFICATION_MODE}"
+    enabled: false
+    # enabled: true
+    # certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
+    # verification_mode: "${VERIFICATION_MODE}"
 
