--- a/extras/metricbeat/metricbeat/kibana-xpack.yml
+++ b/extras/metricbeat/metricbeat/kibana-xpack.yml
@@ -4,10 +4,11 @@
 - module: kibana
   xpack.enabled: true
   period: 10s
-  hosts: ["https://kibana.${APP_NET}:5601"]
+  hosts: ["http://kibana.${APP_NET}:5601"]
   username: "${ELASTICSEARCH_USERNAME}"
   password: "${ELASTICSEARCH_PASSWORD}"
   ssl:
-    enabled: true
-    certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-    verification_mode: "${VERIFICATION_MODE}"
+    enabled: false
+    # enabled: true
+    # certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
+    # verification_mode: "${VERIFICATION_MODE}"
