--- a/compose/docker-logstash.yml
+++ b/compose/docker-logstash.yml
@@ -17,15 +17,15 @@
     networks:
       elastic:
         ipv4_address: ${ES_NET}.5
-    # ports:
+    ports:
       # syslog access pipeline
-      # - 5000:5000/udp
-      # - 5000:5000/tcp
+      - 5000:5000/udp
+      - 5000:5000/tcp
       # syslog error pipeline
-      # - 5001:5001/udp
-      # - 5001:5001/tcp
+      - 5001:5001/udp
+      - 5001:5001/tcp
       # beat pipeline
-      # - ${LOGSTASH_PORT}:5044
+      - ${LOGSTASH_PORT}:5044
       # metrics
       # - 9600:9600
     volumes:
