--- a/compose/docker-kibana.yml
+++ b/compose/docker-kibana.yml
@@ -20,8 +20,8 @@
       # local network:
       elastic:
         ipv4_address: ${ES_NET}.6
-    # ports:
-    #   - ${KIBANA_PORT}:5601
+    ports:
+      - ${KIBANA_PORT}:5601
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./extras/hosts/hosts:/etc/hosts
