--- a/compose/docker-apm.yml
+++ b/compose/docker-apm.yml
@@ -18,8 +18,8 @@
       # local network:
       elastic:
         ipv4_address: ${ES_NET}.10
-    ports:
-      - ${APM_PORT}:8200
+    # ports:
+    #   - ${APM_PORT}:8200
     #   - 5066:5066
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
