--- a/.env.dist
+++ b/.env.dist
@@ -18,14 +18,14 @@ LOGSTASH_PASSWORD=changeme
 LOGSTASH_WRITE_ROLE=logstash_write_role
 APM_PASSWORD=changeme
 LICENSE=basic
-ES_NODES=es01,es02
+# ES_NODES=es01,es02
 KIBANA_HOST=kibana.eliasondrej.com
 ES01_JAVA_OPTS="-Xms400m -Xmx400m"
-ES02_JAVA_OPTS="-Xms400m -Xmx400m"
+# ES02_JAVA_OPTS="-Xms400m -Xmx400m"
 LS_JAVA_OPTS="-Xms512m -Xmx512m"
 KIBANA_NODE_OPTS="--max_old_space_size=512"
 MEM_ES01_LIMIT=800M
-MEM_ES02_LIMIT=800M
+# MEM_ES02_LIMIT=800M
 MEM_KIBANA_LIMIT=800M
 MEM_LOGSTASH_LIMIT=800M
 MEM_LIMIT=128M
