--- a/compose/docker-end.yml
+++ b/compose/docker-end.yml
@@ -5,9 +5,9 @@ volumes:
   esdata01:
     external: true
     name: "${APP_ID}-es01"
-  esdata02:
-    external: true
-    name: "${APP_ID}-es02"
+#  esdata02:
+#    external: true
+#    name: "${APP_ID}-es02"
   filebeat:
     external: true
     name: "${APP_ID}-filebeat"
