--- a/compose/docker-es01.yml
+++ b/compose/docker-es01.yml
@@ -21,16 +21,18 @@
       - esdata01:/usr/share/elasticsearch
     environment:
       - network.host=${ES_NET}.2
-      - node.name=es01
+      - node.name=master
+      # - node.name=es01
       - http.port=9200
-      - transport.port=9300
-      - discovery.seed_hosts=es02:9301
-      - xpack.security.transport.ssl.key=certs/es01/es01.key
-      - xpack.security.transport.ssl.certificate=certs/es01/es01.crt
+      # - transport.port=9300
+      - discovery.type=single-node
+      # - discovery.seed_hosts=es02:9301
+      # - xpack.security.transport.ssl.key=certs/es01/es01.key
+      # - xpack.security.transport.ssl.certificate=certs/es01/es01.crt
       - CLUSTER_NAME=${CLUSTER_NAME}
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
       - ES_JAVA_OPTS=${ES01_JAVA_OPTS}
-      - ES_NODES=${ES_NODES}
+      # - ES_NODES=${ES_NODES}
       - LICENSE=${LICENSE}
       - VERIFICATION_MODE=${VERIFICATION_MODE}
     ulimits:
