--- a/.env.dist
+++ b/.env.dist
@@ -41,7 +41,7 @@ ES_IP=192.168.1.151
 
 VERIFICATION_MODE=certificate
 ELASTIC_AGENT_TAGS=platel,${STAGE}
-CLUSTER_NAME=platel-cluster
+CLUSTER_NAME=es-cluster
 CLUSTER_UUID=
 ELASTIC_APM_SERVER_URL=http://apm-server.${HOST_NICK}.${INT_NETWORK}:${APM_PORT}
 ELASTIC_APM_API_KEY=
