--- a/extras/elasticsearch/elasticsearch.yml
+++ b/extras/elasticsearch/elasticsearch.yml
@@ -4,18 +4,23 @@ cluster.name: "${CLUSTER_NAME}"
 node.roles: [master, data, ingest]
 bootstrap.memory_lock: false
 
-xpack:
-  license.self_generated.type: "${LICENSE}"
-  security:
-    authc.api_key.enabled: true
-    http:
-      ssl:
-        enabled: false
-    transport:
-      ssl:
-        enabled: false
-        # enabled: true
-        # verification_mode: "none"
-        # certificate_authorities: "certs/ca/ca.crt"
+discovery.type: single-node
+
+xpack.ml.enabled: false
+xpack.security.enabled: false
+xpack.security.http.ssl.enabled: false
+
+# xpack:
+#   license.self_generated.type: "${LICENSE}"
+#   security:
+#     authc.api_key.enabled: true
+#     http:
+#       ssl:
+#         enabled: false
+#     transport:
+#       ssl:
+#         enabled: true
+#         verification_mode: "none"
+#         certificate_authorities: "certs/ca/ca.crt"
 
 # logger.org.elasticsearch.discovery: INFO
