--- a/compose/docker-logstash.yml
+++ b/compose/docker-logstash.yml
@@ -48,12 +48,12 @@
       - CLUSTER_UUID=${CLUSTER_UUID}
       - ELASTIC_SSL_CERTIFICATEAUTHORITY=/usr/share/logstash/config/certs/ca.crt
       - ES_NET=${ES_NET}
-      - LOGSTASH_USERNAME=${LOGSTASH_USERNAME}
-      - LOGSTASH_PASSWORD=${LOGSTASH_PASSWORD}
       - LS_JAVA_OPTS=${LS_JAVA_OPTS}
       - VERIFICATION_MODE=${VERIFICATION_MODE}
       - STACK_VERSION=${STACK_VERSION}
-      - ELASTIC_USERNAME=elastic
+      - LOGSTASH_USERNAME=logstash_writer
+      - LOGSTASH_PASSWORD=${ELASTIC_PASSWORD}
+      - ELASTIC_USERNAME=${ELASTIC_USERNAME}
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
     healthcheck:
       test: ["CMD-SHELL", "curl -s -I http://${ES_NET}.5:9600 | grep -q 'HTTP/1.1 200 OK'"]
