--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -8,11 +8,12 @@ input {
 # https://www.elastic.co/guide/en/logstash/current/plugins-outputs-elasticsearch.html
 # https://www.elastic.co/guide/en/logstash/current/use-ingest-pipelines.html
 output {
-    elasticsearch {
-      hosts => ["http://es01.${APP_NET}:9200"]
-      data_stream => true
-      ssl => false
-      user => "${LOGSTASH_USERNAME}"
-      password => "${LOGSTASH_PASSWORD}"
-    }
+  elasticsearch {
+    hosts => ["https://es01.${APP_NET}:9200"]
+    data_stream => true
+    ssl => true
+    cacert => ["${ELASTIC_SSL_CERTIFICATEAUTHORITY}"]
+    user => "${LOGSTASH_USERNAME}"
+    password => "${LOGSTASH_PASSWORD}"
+  }
 }
