--- a/extras/metricbeat/metricbeat.yml
+++ b/extras/metricbeat/metricbeat.yml
@@ -40,15 +40,14 @@ output:
 # ----------------------------- Elasticsearch Output ----------------------------
 
   elasticsearch:
-    hosts: ["http://es01.${APP_NET}:9200"]
-    protocol: "http"
+    hosts: ["https://es01.${APP_NET}:9200"]
+    protocol: "https"
     username: "${ELASTICSEARCH_USERNAME}"
     password: "${ELASTICSEARCH_PASSWORD}"
     ssl:
-      enabled: false
-      # enabled: true
-      # certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-      # verification_mode: "${VERIFICATION_MODE}"
+      enabled: true
+      certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
+      verification_mode: "${VERIFICATION_MODE}"
     
 #------------------------------ Setup -------------------------------
   
@@ -60,15 +59,14 @@ setup:
     # _source.enabled: false
 
   elasticsearch:
-    hosts: ["http://es01.${APP_NET}:9200"]
-    protocol: "http"
+    hosts: ["https://es01.${APP_NET}:9200"]
+    protocol: "https"
     username: "${ELASTICSEARCH_USERNAME}"
     password: "${ELASTICSEARCH_PASSWORD}"
     ssl:
-      enabled: false
-      # enabled: true
-      # certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-      # verification_mode: "${VERIFICATION_MODE}"
+      enabled: true
+      certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
+      verification_mode: "${VERIFICATION_MODE}"
 
   kibana:
     host: "http://kibana.${APP_NET}:5601"
