--- a/compose/docker-es01.yml
+++ b/compose/docker-es01.yml
@@ -25,14 +25,11 @@
       - http.port=9200
       - transport.port=9300
       - discovery.type=single-node
-      - xpack.security.enabled=false
-      # - discovery.seed_hosts=es02:9301
-      # - xpack.security.transport.ssl.key=certs/es01/es01.key
-      # - xpack.security.transport.ssl.certificate=certs/es01/es01.crt
+      - xpack.security.http.ssl.key=certs/es01/es01.key
+      - xpack.security.http.ssl.certificate=certs/es01/es01.crt
       - CLUSTER_NAME=${CLUSTER_NAME}
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
       - ES_JAVA_OPTS=${ES01_JAVA_OPTS}
-      # - ES_NODES=${ES_NODES}
       - LICENSE=${LICENSE}
       - VERIFICATION_MODE=${VERIFICATION_MODE}
     ulimits:
@@ -40,7 +37,7 @@
         soft: -1
         hard: -1
     healthcheck:
-      test: ["CMD-SHELL", "curl -s http://${ES_NET}.2:9200 | grep -q 'missing authentication credentials'" ]
+      test: ["CMD-SHELL", "curl -s --cacert config/certs/ca/ca.crt https://${ES_NET}.2:9200 | grep -q 'missing authentication credentials'"]
       interval: 10s
       timeout: 10s
       retries: 500
