--- a/compose/docker-heartbeat.yml
+++ b/compose/docker-heartbeat.yml
@@ -27,10 +27,9 @@
     environment:
       - APP_HOST=${APP_HOST}
       - APP_NET=${ELASTIC_NETWORK}
-      - CLUSTER_NAME=${CLUSTER_NAME}
       - CLUSTER_UUID=${CLUSTER_UUID}
-      - ELASTICSEARCH_USERNAME=elastic
-      - ELASTICSEARCH_PASSWORD=${KIBANA_PASSWORD}
+      - ELASTICSEARCH_USERNAME=${ELASTIC_USERNAME}
+      - ELASTICSEARCH_PASSWORD=${ELASTIC_PASSWORD}
       - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=/usr/share/heartbeat/certs/ca/ca.crt
       - ES_NET=${ES_NET}
       - STAGE=${STAGE}
