--- a/extras/logstash/logstash.yml
+++ b/extras/logstash/logstash.yml
@@ -5,8 +5,8 @@ monitoring:
   cluster_uuid: "${CLUSTER_UUID}"
   # elasticsearch:
   #   hosts: ["http://es01.${APP_NET}:9200"]
-  #   username: "elastic"
-  #   password: "${LOGSTASH_PASSWORD}"
+  #   username: "${ELASTIC_USERNAME}"
+  #   password: "${ELASTIC_PASSWORD}"
 
 api.ssl.enabled: false
 # https://www.elastic.co/guide/en/logstash/current/ls-security.html
