--- a/extras/logstash/syslog-access.conf
+++ b/extras/logstash/syslog-access.conf
@@ -26,9 +26,10 @@ filter {
 # https://www.elastic.co/guide/en/logstash/current/plugins-outputs-elasticsearch.html
 output {
   elasticsearch {
-    hosts => ["http://es01.${APP_NET}:9200"]
+    hosts => ["https://es01.${APP_NET}:9200"]
     data_stream => true
-    ssl => false
+    ssl => true
+    cacert => ["${ELASTIC_SSL_CERTIFICATEAUTHORITY}"]
     user => "${LOGSTASH_USERNAME}"
     password => "${LOGSTASH_PASSWORD}"
   }
